Set all env variables

--- a/Nginx/nginx.conf.tmpl
+++ b/Nginx/nginx.conf.tmpl
@@ -32,17 +32,19 @@ http {
     # load configs
     include /etc/nginx/conf.d/*.conf;
 
-    # oc.ascade.co.jp
     server {
         listen 80;
         listen [::]:80;
 
-        server_name ext-host0004.ascade.co.jp;
-
-        auth_basic "Restricted";
-        auth_basic_user_file /etc/nginx/.htpasswd;
+        server_name ${SERVER_NAME};
 
         # security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # . files
         location ~ /\.(?!well-known) {
@@ -51,7 +53,7 @@ http {
 
         # reverse proxy
         location / {
-            proxy_pass http://app:8080;
+            proxy_pass ${APP_URL};
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
 
@@ -63,18 +65,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
-        }
-
-        # favicon.ico
-        location = /favicon.ico {
-            log_not_found off;
-            access_log off;
-        }
-
-        # robots.txt
-        location = /robots.txt {
-            log_not_found off;
-            access_log off;
         }
 
         # gzip
