--- a/Web/src/assets/fonts.css
+++ b/Web/src/assets/fonts.css
@@ -1,3 +1,21 @@
+/* roboto-300 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("~assets/fonts/Roboto/roboto-v20-latin-300.eot"); /* IE9 Compat Modes */
+  src: local("Roboto Light"), local("Roboto-Light"),
+    url("~assets/fonts/Roboto/roboto-v20-latin-300.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("~assets/fonts/Roboto/roboto-v20-latin-300.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("~assets/fonts/Roboto/roboto-v20-latin-300.woff") format("woff"),
+    /* Modern Browsers */ url("~assets/fonts/Roboto/roboto-v20-latin-300.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("~assets/fonts/Roboto/roboto-v20-latin-300.svg#Roboto") format("svg"); /* Legacy iOS */
+}
 /* roboto-regular - latin */
 @font-face {
   font-family: "Roboto";
